--- a/.github/workflows/ejercicio_ci.yml
+++ b/.github/workflows/ejercicio_ci.yml
@@ -4,13 +4,17 @@ on:
   push:
     branches: [config/ci]
 
+strategy:
+  matrix:
+    mysql-version: [5.7, 8.0]
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:${{ matrix.mysql-version }}
         env:
           MYSQL_ROOT_PASSWORD: uvlhub_root_password
           MYSQL_DATABASE: uvlhubdb_test
@@ -25,7 +29,11 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.11'
+
+    - name: Check for outdated dependencies
+      run: |
+      pip list --outdated
 
     - name: Prepare environment
       run: |
