--- a/docker/images/Dockerfile.dev
+++ b/docker/images/Dockerfile.dev
@@ -11,7 +11,9 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends curl \
     && apt-get install -y --no-install-recommends bash \
     && apt-get install -y --no-install-recommends openrc \
-    && apt-get install -y --no-install-recommends build-essential 
+    && apt-get install -y --no-install-recommends build-essential
+    && apt-get install net-tools
+    && apt-get install iputils-ping 
 
 # Install Docker CLI
 RUN apt-get install -y --no-install-recommends ca-certificates gnupg lsb-release \
